<!--
  ~ Copyright (c) 2011 - 2024, Zingaya, Inc. All rights reserved.
  -->

<resources>
    <string name="voximplant_com">.voximplant.com</string>

    <string name="action_sign_in">LOG IN</string>
    <string name="action_call">CALL</string>
    <string name="action_sign_in_token">LOG IN WITH TOKEN</string>
    <string name="prompt_login">USER@APP.ACCOUNT</string>
    <string name="prompt_password">PASSWORD</string>
    <string name="node">Node</string>
    <string-array name="node_array">
        <item>Node 1</item>
        <item>Node 2</item>
        <item>Node 3</item>
        <item>Node 4</item>
        <item>Node 5</item>
        <item>Node 6</item>
        <item>Node 7</item>
        <item>Node 8</item>
        <item>Node 9</item>
        <item>Node 10</item>
        <item>Node 11</item>
        <item>Node 12</item>
        <item>Node 13</item>
    </string-array>

    <string name="logging_in">Logging in…</string>
    <string name="logged_in_as">Logged in as</string>
    <string name="required_field">Required</string>
    <string name="invalid_username_warning">Invalid username</string>
    <string name="invalid_password_warning">Invalid password</string>

    <string name="alert_select_audio_device">Audio device</string>
    <string name="decline">Decline</string>
    <string name="answer">Answer</string>
    <string name="incoming_call">Incoming call</string>
    <string name="outgoing_call">Outgoing call</string>
    <string name="enable_video_button">enable video button</string>
    <string name="hold_button">hold button</string>
    <string name="hangup_button">hangup button</string>
    <string name="change_audio_device_button">change audio device button</string>
    <string name="mute_button">mute button</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="resume">Resume</string>
    <string name="hold">Hold</string>
    <string name="unhold">Unhold</string>
    <string name="audio">Audio</string>
    <string name="cam">Cam</string>
    <string name="mic">Mic</string>
    <string name="hangup">Hangup</string>
    <string name="cancel">Cancel</string>
    <string name="call_back">Call back</string>
    <string name="call_failed">Call failed</string>
    <string name="logo">logo</string>
    <string name="call_to">Call to</string>
    <string name="logout_button">logout button</string>
    <string name="loading">Loading…</string>
    <string name="connecting">Connecting…</string>
    <string name="reconnecting">Reconnecting…</string>
    <string name="sharing">Sharing</string>
    <string name="unknown_user">Unknown user</string>
    <string name="screen_sharing_min_api_warning">Screen sharing works on Android API >= 21</string>

    <string name="call_state_none">No active call</string>
    <string name="call_state_incoming">Incoming call</string>
    <string name="call_state_outgoing">Outgoing call</string>
    <string name="call_state_connecting">Connecting…</string>
    <string name="call_state_ringing">Ringing…</string>
    <string name="call_state_connected">Connected</string>
    <string name="call_state_failed">Call failed</string>
    <string name="call_state_disconnecting">Disconnecting…</string>
    <string name="call_state_disconnected">Disconnected</string>
    <string name="call_state_reconnecting">Reconnecting…</string>
    <string name="call_in_progress">Call in progress</string>
    <string name="call_on_hold">Call on hold</string>

    <string name="error_failed_to_reconnect_and_check_connectivity">Failed to reconnect, check the connection and try again</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="close">Close</string>
    <string name="error_incorrect_password">The password is incorrect</string>
    <string name="error_incorrect_username">The username is incorrect</string>
    <string name="error_login_failed_account_frozen">Login failed due to account is frozen. Please contact your admin</string>
    <string name="error_login_failed_token_expired">Login failed due to token being expired. Please use password</string>
    <string name="error_login_failed_timeout">Login failed due to timeout. Please try again</string>
    <string name="error_login_failed_mau_limit">Login failed due to MAU limit is reached</string>
    <string name="error_login_failed_network_issues">Login failed due to network issues. Please try again</string>
    <string name="error_login_failed_internal_error">Login failed due to internal error. Please try again</string>
    <string name="error_logout_failed_network_issues">Logout failed due to network issues. Please try again</string>
    <string name="error_no_active_call">No active call found</string>
    <string name="error_already_managing_call">Already managing a call</string>
    <string name="error_creating_call">There was an error creating call</string>

    <string name="background_push_notification_channel_name">Background push</string>
    <string name="notification_incoming_call">Receive incoming call</string>
    <string name="notification_ongoing_call">Ongoing call status</string>
    <string name="notification_group_calls">Calls</string>
    <string name="username_is_calling">is calling</string>
    <string name="ongoing">Ongoing</string>
    <string name="settings">Settings</string>
    <string name="permission_mic_to_call">To make calls, grant access to microphone</string>
    <string name="permission_bluetooth_to_call">To make calls, grant access to nearby devices</string>
    <string name="permission_denied">permission denied</string>

    <string name="allow_notifications_on_lock_screen_dialog_title">Allow app to show notifications on lock screen</string>
    <string name="not_now">Not now</string>

    <string name="enable_camera_label">Enable camera</string>
</resources>
